--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -8,6 +8,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
-GameDefaultMap=/Game/_Levels/BattleGround.BattleGround
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
